[project]
name = "pytorch-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.5",
    "nn>=0.1.1",
    "tensorboard>=2.20.0",
    "tokenizers>=0.23.1",
    "torchmetrics>=1.9.0",
]
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://pytorch.org"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }



